--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,12 @@
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.0
-cycler==0.11.0
-debugpy==1.6.2
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==0.9.0
-fastjsonschema==2.16.1
-fonttools==4.34.4
-idna==3.3
-imageio==2.19.5
-importlib-resources==5.9.0
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-jedi==0.18.1
-Jinja2==3.1.2
-jsonschema==4.7.2
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-networkx==2.8.5
-notebook==6.4.12
-numpy==1.23.1
-opencv-python==4.6.0.66
-packaging==21.3
-pandas==1.4.3
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-psutil==5.9.1
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-pydicom==2.3.0
-Pygments==2.12.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-pytz==2022.1
-PyWavelets==1.3.0
-pyzmq==23.2.0
-requests==2.28.1
-scikit-image==0.19.3
-scipy==1.8.1
-Send2Trash==1.8.0
-Shapely==1.8.2
-six==1.16.0
-soupsieve==2.3.2.post1
-stack-data==0.3.0
-terminado==0.15.0
-tifffile==2022.5.4
-tinycss2==1.1.1
-torch==1.12.0
-torchvision==0.13.0
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.3.0
-typing_extensions==4.3.0
-urllib3==1.26.10
-wcwidth==0.2.5
-webencodings==0.5.1
-zipp==3.8.1
+jupyterlab
+numpy
+opencv-python
+pandas
+pydicom
+requests
+scikit-image
+scipy
+shapely
+torch
+torchvision
+tqdm
